--- a/basicSD_colab.ipynb
+++ b/basicSD_colab.ipynb
@@ -47,7 +47,7 @@
         "!git clone https://github.com/xshini01/BasicSD.git\n",
         "%cd BasicSD\n",
         "!pip install -r requirements.txt -q\n",
-        "!python main.py --share"
+        "%run main.py"
       ]
     }
   ],
